--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "date-fns": "^2.27.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hooks-window-size": "^0.2.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.4",
