--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "react-dom": "^17.0.2",
     "react-hooks-window-size": "^0.2.2",
     "react-icons": "^4.3.1",
+    "react-image": "^4.0.3",
+    "react-native": "^0.66.3",
+    "react-random-image": "^1.0.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.4",
     "styled-components": "^5.3.3",
