--- a/package.json
+++ b/package.json
@@ -17,16 +17,16 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
     "date-fns": "^2.27.0",
+    "history": "^5.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.20.5",
     "react-hooks-window-size": "^0.2.2",
     "react-icons": "^4.3.1",
-    "react-router-dom": "^6.0.2",
     "react-image": "^4.0.3",
     "react-native": "^0.66.3",
     "react-random-image": "^1.0.3",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "^6.0.0-beta.0",
     "react-scripts": "^3.4.4",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.1.2"
